@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# "$Id: run-stp-tests.sh,v 1.4.2.8 2002/06/07 21:04:44 mike Exp $"
+# "$Id: run-stp-tests.sh,v 1.4.2.9 2002/10/15 16:20:04 mike Exp $"
 #
 #   Perform the complete set of IPP compliance tests specified in the
 #   CUPS Software Test Plan.
@@ -127,6 +127,47 @@ EOF
 touch /tmp/$user/classes.conf
 touch /tmp/$user/printers.conf
 
+#
+# Setup lots of test queues - 500 with PPD files, 500 without...
+#
+
+i=1
+while test $i -le 500; do
+	cat >>/tmp/$user/printers.conf <<EOF
+<Printer test-$i>
+Accepting Yes
+DeviceURI file:/dev/null
+Info Test PS printer $i
+JobSheets none none
+Location CUPS test suite
+State Idle
+StateMessage Printer $1 is idle.
+</Printer>
+EOF
+
+	cp testps.ppd /tmp/$user/ppd/test-$i.ppd
+
+	i=`expr $i + 1`
+done
+
+while test $i -le 1000; do
+	cat >>/tmp/$user/printers.conf <<EOF
+<Printer test-$i>
+Accepting Yes
+DeviceURI file:/dev/null
+Info Test raw printer $i
+JobSheets none none
+Location CUPS test suite
+State Idle
+StateMessage Printer $1 is idle.
+</Printer>
+EOF
+
+	i=`expr $i + 1`
+done
+
+cp /tmp/$user/printers.conf /tmp/$user/printers.conf.orig
+
 cp $root/conf/mime.types /tmp/$user/mime.types
 cp $root/conf/mime.convs /tmp/$user/mime.convs
 
@@ -180,10 +221,10 @@ echo "Starting scheduler..."
 ../scheduler/cupsd -c /tmp/$user/cupsd.conf -f &
 cupsd=$!
 
-if test -x /usr/bin/strace; then
-	# Trace system calls in cupsd if we have strace...
-	/usr/bin/strace -tt -o /tmp/$user/log/cupsd.trace -p $cupsd &
-fi
+#if test -x /usr/bin/strace; then
+#	# Trace system calls in cupsd if we have strace...
+#	/usr/bin/strace -tt -o /tmp/$user/log/cupsd.trace -p $cupsd &
+#fi
 
 echo "Scheduler is PID $cupsd; run debugger now if you need to."
 echo ""
@@ -347,5 +388,5 @@ echo "    $pdffile"
 echo ""
 
 #
-# End of "$Id: run-stp-tests.sh,v 1.4.2.8 2002/06/07 21:04:44 mike Exp $"
+# End of "$Id: run-stp-tests.sh,v 1.4.2.9 2002/10/15 16:20:04 mike Exp $"
 #
